--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </section> -->
     <div class="columns" style="height: 100%;">
-        <div class="column is-3" id="container_indicators">
+        <div class="column is-2" id="container_indicators">
             <div class="indicator_value level-item has-text-centered">
                 <div>
                     <p class="heading">Encuestas realizadas</p>
@@ -63,11 +63,40 @@
                     <p class="title" id="n_indicadores_cloracion"></p>
                 </div>
             </div>
+            <div class="indicator_value level-item has-text-centered">
+                <div>
+                    <p class="heading">OTS que realizaron por lo menos una encuesta</p>
+                    <p class="title" id="n_ots_encuesta"></p>
+                </div>
+            </div>
+            <div style="text-align: center;">
+                <button class="button is-small" id="downloadDataButton">descargar datos</button>
+                <!-- <a onclick="_downloadData">descargar datos</a> -->
+            </div>
+        </div>
+        <div class="column is-5" id="container_charts">
+            <div id="survey_pie" class="">
+                <canvas id="canvas_pie"></canvas>
+            </div>
+            <div id="ots_resumen" class="columns">
+                <canvas id="score_ots"></canvas>
+
+                <!-- <div class="column is-4">
+                    <h1 class="subtitle">ESTRATEGIA DE CLORACIÓN</h1>
+                </div>
+                <div class="column is-8">
+                    <canvas id="score_ots"></canvas>
+                </div> -->
+            </div>
+
 
         </div>
-        <div class="column is-9 is-desktop is-vcentered" id="container_charts">
-            <canvas id="canvas"></canvas>
+        <div class="column is-5 is-desktop is-vcentered" id="container_charts">
+            <canvas id="canvas_stacked"></canvas>
         </div>
+        <!-- <div class="column is-3 is-desktop is-vcentered" id="container_charts">
+            <canvas id="score_ots"></canvas>
+        </div> -->
     </div>
     <script src="index.js"></script>
 </body>
