--- a/index.html
+++ b/index.html
@@ -70,23 +70,15 @@
                 </div>
             </div>
             <div style="text-align: center;">
-                <button class="button is-small" id="downloadDataButton">descargar datos</button>
-                <!-- <a onclick="_downloadData">descargar datos</a> -->
+                <button class="button is-small is-danger" id="downloadDataButton">descargar datos</button>
             </div>
         </div>
         <div class="column is-5" id="container_charts">
-            <div id="survey_pie" class="">
+            <div id="survey_pie" class="is-vcentered">
                 <canvas id="canvas_pie"></canvas>
             </div>
-            <div id="ots_resumen" class="columns">
+            <div id="ots_resumen" class="is-vcentered">
                 <canvas id="score_ots"></canvas>
-
-                <!-- <div class="column is-4">
-                    <h1 class="subtitle">ESTRATEGIA DE CLORACIÓN</h1>
-                </div>
-                <div class="column is-8">
-                    <canvas id="score_ots"></canvas>
-                </div> -->
             </div>
 
 
@@ -94,9 +86,6 @@
         <div class="column is-5 is-desktop is-vcentered" id="container_charts">
             <canvas id="canvas_stacked"></canvas>
         </div>
-        <!-- <div class="column is-3 is-desktop is-vcentered" id="container_charts">
-            <canvas id="score_ots"></canvas>
-        </div> -->
     </div>
     <script src="index.js"></script>
 </body>
