Se agrego un favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://js.arcgis.com/4.17/"></script>
     <script src="https://cdn.jsdelivr.net/npm/danfojs@0.1.2/dist/index.min.js"></script>
+    <link rel="icon" type="image/png" href="monster-truck.png" />
     <title>PNSRDash</title>
 </head>
 
